// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="cl-label"
    data-testid="test-label"
    for="test-input-id"
  >
    <span
      class="cl-label__text"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="cl-label"
    data-testid="test-label"
    for="test-input-id"
  >
    <span
      class="cl-label__text"
    >
      Test label
      <abbr
        class="cl-label__required"
        title="required"
      >
        *
      </abbr>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="cl-label"
    data-testid="test-label"
    for="test-input-id"
  />
</DocumentFragment>
`;

exports[`Label > should render left icon 1`] = `
<DocumentFragment>
  <label
    class="cl-label"
    data-testid="test-label"
    for="test-input-id"
  >
    <span
      class="cl-icon chop-icon__arrow-left cl-icon_extra-small"
    />
    <span
      class="cl-label__text"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render right icon 1`] = `
<DocumentFragment>
  <label
    class="cl-label"
    data-testid="test-label"
    for="test-input-id"
  >
    <span
      class="cl-label__text"
    >
      Test label
    </span>
    <span
      class="cl-icon chop-icon__arrow-down-right cl-icon_extra-small"
    />
  </label>
</DocumentFragment>
`;
